removed line numbering. improved layout a bit. still a bit wretched

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,16 +26,8 @@
       <h1 class="title">Devlog</h1>
     </header>
     <div id="container">
-      <p class="tagline">Development Log</p>
+      <p class="tagline">Development Notes</p>
       <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/danramteke/devlog/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/danramteke/devlog/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/danramteke/devlog" class="code">View Devlog on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
         <article class="markdown-body">
 
               {{content}}
