--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -51,7 +51,7 @@ table {
 
 body {
   font-size: 15px;
-  font-family: Arial, Arial, Helvetica, sans-serif;
+  font-family: 'Mate', sans-serif;
   line-height: 1.5;
   background: #D1D1D1;
 }
