--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,8 +5,8 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/>
+  <link href='http://fonts.googleapis.com/css?family=Mate' rel='stylesheet' type='text/css'>
+  <!-- <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/> -->
   <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
   <link rel="stylesheet" href="stylesheets/devlog.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -37,19 +37,12 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/danramteke" class="avatar"><img src="https://secure.gravatar.com/avatar/0f332eefb17d62070ae45b89a5784617?s=30&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-140.png" width="48" height="48"/></a> <a href="https://github.com/danramteke">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a></p>
-
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br/>theme by <a href="http://twitter.com/jonrohan/">Jon Rohan</a></small>
+        <p><a href="https://github.com/danramteke">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a></p>
       </div>
     </footer>
   </div>
   <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/danramteke/devlog/tarball/master" class="tar">tar</a><a href="https://github.com/danramteke/devlog/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
+
   </div>
 
   
