--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -1,15 +1,105 @@
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  font-family: "Palatino", sans-serif;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+/* done with reset */
+
+body {
+	background-color: #eee;
+	margin: 20px;
+}
+
 div.post {
 	margin-top: 15px;
 }
 
 div.post_title {
-	font-size: large;
+	font-size: 1.3em;
+	background-color: #C3FFBE;
+	padding-top: 10px;
+	padding-bottom: 5px;
+	padding-left: 20px;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-bottom: 20px;
+	
+	border-bottom: 1px black solid;
+}
+ a{
+	color: black;
+	text-decoration: none;
 }
 
+h1 {
+	color: #00235D;
+	font-size: 3em;
+}
+
+.tagline {
+	color: #00235D;
+	font-size: 18pt;
+}
+
+footer {
+	background-color: #FFDCFF;
+	color: #5C0023;
+	padding-top: 10px;
+	padding-bottom: 5px;
+	padding-left: 20px;
+	margin-left: -20px;
+	margin-right: -20px;
+	margin-bottom: 20px;
+	border-bottom: 1px black solid;
+}
 
 div.gist {
-	margin-right: -20px;
-	margin-left: -20px;
+/*	margin-right: -20px;
+	margin-left: -20px;*/
 }
 .gist .line {
 	color: black;
@@ -17,5 +107,5 @@ div.gist {
 
 .post{
 	padding-bottom: 30px;
-	border-bottom: solid black 1px;
+	
 }
