more colors and margins

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
     </div>
     <footer>
       <div class="owner">
-        <p><a href="https://github.com/danramteke">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a></p>
+        <p><a href="http://danramteke.com">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a></p>
       </div>
     </footer>
   </div>
