--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -86,6 +86,7 @@ h1 {
 }
 
 footer, .signoff {
+	margin-top: 10px;
 	background-color: #FFDCFF;
 	color: #5C0023;
 	padding-top: 10px;
@@ -97,15 +98,9 @@ footer, .signoff {
 	border-bottom: 1px #00235D solid;
 }
 
-div.gist {
-/*	margin-right: -20px;
-	margin-left: -20px;*/
-}
-.gist .line {
-	color: black;
-}
+
 
 .post{
-	padding-bottom: 30px;
+	margin-bottom: 50px;
 	
 }
