--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -56,6 +56,7 @@ body {
 
 div.post {
 	margin-top: 15px;
+	margin-bottom: 50px;
 }
 
 div.post_title {
@@ -70,7 +71,8 @@ div.post_title {
 	
 	border-bottom: 1px #00235D solid;
 }
- a{
+
+a{
 	color: black;
 	text-decoration: none;
 }
@@ -98,9 +100,8 @@ footer, .signoff {
 	border-bottom: 1px #00235D solid;
 }
 
-
-
-.post{
-	margin-bottom: 50px;
-	
+@media only screen and (min-width : 769px) {
+	.post p:not(.signoff), .post .gist{
+		width: 768px;
+	}
 }
