--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -111,6 +111,7 @@ footer, .signoff {
 code {
 	font-family: "Menlo", monospace;
 	background-color: white;
+	font-size: -1;
 }
 
 @media only screen and (min-width : 769px) {
