--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -111,7 +111,7 @@ footer, .signoff {
 code {
 	font-family: "Menlo", monospace;
 	background-color: white;
-	font-size: -1;
+	font-size: 0.9em;
 }
 
 @media only screen and (min-width : 769px) {
