--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <div id="main" role="main">
         <article class="markdown-body">
 			<div class="post">
-		  <div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
+		  <div class="post_title"><a href="/devlog/{{ url }}">{{title}}</a></div>
               {{content}}
 			  <p class="signoff">
 			    {{ post.date | date: "%b %d, %Y" }}
