--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,12 +30,9 @@
       <div id="main" role="main">
         <article class="markdown-body">
 			<div class="post">
-		  <div class="post_title"><a href="/devlog/{{ url }}">{{title}}</a></div>
+		  <div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
               {{content}}
-			  <p class="signoff">
-			    {{ post.date | date: "%b %d, %Y" }}
-			  </p>
-			  </div>
+
         </article>
       </div>
     </div>
