--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,9 @@
       <div id="main" role="main">
         <article class="markdown-body">
 			<div class="post">
-		  <div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
+		  		<div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
               {{content}}
-
+			</div>
         </article>
       </div>
     </div>
