--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,49 +3,50 @@
 <!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on http://github.com/jonrohan -->
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <link href='http://fonts.googleapis.com/css?family=Mate' rel='stylesheet' type='text/css'>
-  <!-- <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/> -->
-  <link rel="stylesheet" href="/devlog/stylesheets/pygment_trac.css"/>
-  <link rel="stylesheet" href="/devlog/stylesheets/devlog.css"/>
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <link href='http://fonts.googleapis.com/css?family=Mate' rel='stylesheet' type='text/css'>
+    <!-- <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/> -->
+    <link rel="stylesheet" href="/devlog/stylesheets/pygment_trac.css"/>
+    <link rel="stylesheet" href="/devlog/stylesheets/devlog.css"/>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 
-  <title>Devlog</title>
-  <meta name="description" content="Development Log">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Devlog</title>
+    <meta name="description" content="Development Log">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
 
 </head>
 
 <body>
 
-  <div class="wrapper">
+<div class="wrapper">
     <header>
-      <h1 class="title">Devlog</h1>
+        <h1 class="title">Devlog</h1>
     </header>
     <div id="container">
-      <p class="tagline">Development Notes</p>
-      <div id="main" role="main">
-        <article class="markdown-body">
-			<div class="post">
-		  		<div class="post_title"><a href="/devlog/{{ post.url }}">{{post.title}}</a></div>
-              {{content}}
-			</div>
-        </article>
-      </div>
+        <p class="tagline">Development Notes</p>
+
+        <div id="main" role="main">
+            <article class="markdown-body">
+                <div class="post_title"><a href="/devlog/{{ url }}">{{title}}</a></div>
+                {{content}}
+                <p class="signoff">
+                    {{ post.date | date: "%b %d, %Y" }}
+                </p>
+            </article>
+        </div>
     </div>
-    <footer>
-      <div class="owner">
-        <p><a href="http://danramteke.com">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a></p>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
+</div>
+<footer>
+    <div class="owner">
+        <p><a href="http://danramteke.com">danramteke</a> maintains <a href="https://github.com/danramteke/devlog">Devlog</a>
+        </p>
+    </div>
+</footer>
+</div>
 
-  </div>
 
-  
 </body>
 </html>
