--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -32,10 +32,10 @@
             <article class="markdown-body">
 
                 <div class="post">
-                    <div class="post_title"><a href="/devlog{{ post.url }}">{{post.title}}</a></div>
+                    <div class="post_title"><a href="/devlog{{ page.url }}">{{page.title}}</a></div>
                     {{content}}
                     <p class="signoff">
-                        {{ post.date | date: "%b %d, %Y" }}
+                        {{ page.date | date: "%b %d, %Y" }}
                     </p>
 
                 </div>
