--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -78,9 +78,10 @@ div.post_title {
 	padding-top: 10px;
 	padding-bottom: 5px;
 	padding-left: 20px;
+
+	margin-bottom: 20px;
 	margin-left: -20px;
 	margin-right: -20px;
-	margin-bottom: 20px;
 	
 	border-bottom: 1px #00235D solid;
 }
@@ -121,8 +122,12 @@ code {
 }
 
 @media only screen and (min-width : 769px) {
-	.post p:not(.signoff), .post .gist, h1, .tagline, pre {
+	.post p:not(.signoff), .post .gist, h1, .tagline, pre, p.sign_off,  div.post_title a{
 		width: 768px;
 		margin: 0 auto;
+	}
+
+	div.post_title a {
+		display:block;
 	}
 }
