aligned the left hand side. looks pretty good except for the last 20 pixels of decreasing the window size

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,8 +34,8 @@
                 <div class="post">
                     <div class="post_title"><a href="/devlog{{ page.url }}">{{page.title}}</a></div>
                     {{content}}
-                    <p class="signoff">
-                        {{ page.date | date: "%b %d, %Y" }}
+                    <p class="signoff_stripe">
+                        <span class="signoff">{{ page.date | date: "%b %d, %Y" }}</span>
                     </p>
 
                 </div>
