--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -101,7 +101,7 @@ h1 {
 	font-size: 1.3em;
 }
 
-footer, .signoff {
+footer, .signoff_stripe {
 	margin-top: 10px;
 	background-color: #FFDCFF;
 	color: #5C0023;
@@ -122,12 +122,13 @@ code {
 }
 
 @media only screen and (min-width : 769px) {
-	.post p:not(.signoff), .post .gist, h1, .tagline, pre, p.sign_off,  div.post_title a{
+	.post p:not(.signoff_stripe), .post .gist, h1, .tagline, pre, .signoff,  div.post_title a, footer .owner{
 		width: 768px;
 		margin: 0 auto;
 	}
-
-	div.post_title a {
+	div.post_title, p.signoff_stripe, footer { padding-left: 0px; }
+	div.post_title a, .signoff {
+			
 		display:block;
 	}
 }
