fixed post page sign off

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,8 @@
                 <div class="post">
                     <div class="post_title"><a href="/devlog{{ page.url }}">{{page.title}}</a></div>
                     {{content}}
-                    <p class="signoff_stripe">
+                    <p class="signoff-stripe">
+	
                         <span class="signoff">{{ page.date | date: "%b %d, %Y" }}</span>
                     </p>
 
