--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,7 @@
 
 <div class="wrapper">
     <header>
-        <h1 class="title">Devlog</h1>
+        <h1 class="title"><a href="/devlog">Devlog</a></h1>
     </header>
     <div id="container">
         <p class="tagline">Development Notes</p>
