--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <link href='http://fonts.googleapis.com/css?family=Mate' rel='stylesheet' type='text/css'>
   <!-- <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen"/> -->
-  <link rel="stylesheet" href="/devlog/stylesheets/pygment_trac.css"/>
-  <link rel="stylesheet" href="/devlog/stylesheets/devlog.css"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/pygment_trac.css"/>
+  <link rel="stylesheet" href="{{ site.baseurl }}stylesheets/devlog.css"/>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   
 
@@ -23,7 +23,7 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title"><a href="/devlog">Devlog</a></h1>
+      <h1 class="title"><a href="{{ site.baseurl }}">Devlog</a></h1>
     </header>
     <div id="container">
       <p class="tagline">Development Notes</p>
