--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -94,6 +94,11 @@ a {
 	text-decoration: none;
 }
 
+h1 a {
+	text-decoration: none;
+	color: #00235D;
+}
+
 h1 {
 	color: #00235D;
 	font-size: 3em;
