--- a/stylesheets/devlog.css
+++ b/stylesheets/devlog.css
@@ -104,6 +104,7 @@ h1 a {
 
 h1, h2, h3 {
 	color: #00235D;
+	padding-top: 45px;
 }
 
 h1 {
@@ -111,6 +112,7 @@ h1 {
 }
 
 h2 {
+
 	font-size: 1.3em;
 }
 
